panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__arrays__test_array_as_function_parameter.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/arrays/test_array_as_function_parameter.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/arrays/test_array_as_function_parameter.c"
   (function-definition external
      f~0 `fn(xs: ptr<int>) -> int`
      (params
         xs~2 `ptr<int>`)
      (compound-statement
         (return (add `int` (deref `int` (ptr-add `ptr<int>` (xs~2 `ptr<int>`) (sign-extend `long` (0 `int`)))) (deref `int` (ptr-add `ptr<int>` (xs~2 `ptr<int>`) (sign-extend `long` (1 `int`))))))))
   (function-definition external
      main~3 `fn() -> int`
      (compound-statement
         (definition xs~5 `array<int; 2>` ∅)
         (expression
            (assign `int`
               (deref `int`
                  (ptr-add `ptr<int>`
                     (noop-type-conversion `ptr<int>`
                        (addressof `ptr<array<int; 2>>`
                           (xs~5 `array<int; 2>`)))
                     (sign-extend `long` (0 `int`))))
               (4 `int`)))
         (expression
            (assign `int`
               (deref `int`
                  (ptr-add `ptr<int>`
                     (noop-type-conversion `ptr<int>`
                        (addressof `ptr<array<int; 2>>`
                           (xs~5 `array<int; 2>`)))
                     (sign-extend `long` (1 `int`))))
               (6 `int`)))
         (return
            (call `int`
               (addressof `ptr<fn(xs: ptr<int>) -> int>`
                  (f~0 `fn(xs: ptr<int>) -> int`))
               (noop-type-conversion `ptr<int>`
                  (addressof `ptr<array<int; 2>>`
                     (xs~5 `array<int; 2>`))))))))

----- stderr -----
