panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__arrays__test_define_already_declared_array.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/arrays/test_define_already_declared_array.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/arrays/test_define_already_declared_array.c"
   (tentative-definition external xs~0 `array<int; ∅>` ∅)
   (function-definition external
      main~1 `fn() -> int`
      (compound-statement
         (expression
            (assign `int`
               (deref `int`
                  (ptr-add `ptr<int>`
                     (noop-type-conversion `ptr<int>`
                        (addressof `ptr<array<int; ∅>>`
                           (xs~0 `array<int; ∅>`)))
                     (sign-extend `long` (0 `int`))))
               (42 `int`)))
         (expression
            (assign `int`
               (deref `int`
                  (ptr-add `ptr<int>`
                     (noop-type-conversion `ptr<int>`
                        (addressof `ptr<array<int; ∅>>`
                           (xs~0 `array<int; ∅>`)))
                     (sign-extend `long` (12345 `int`))))
               (27 `int`)))
         (return
            (add `int`
               (deref `int`
                  (ptr-add `ptr<int>`
                     (noop-type-conversion `ptr<int>`
                        (addressof `ptr<array<int; ∅>>`
                           (xs~0 `array<int; ∅>`)))
                     (sign-extend `long` (0 `int`))))
               (deref `int`
                  (ptr-add `ptr<int>`
                     (noop-type-conversion `ptr<int>`
                        (addressof `ptr<array<int; ∅>>`
                           (xs~0 `array<int; ∅>`)))
                     (sign-extend `long` (12345 `int`))))))))
   (tentative-definition external xs~0 `array<int; 12346>` ∅))

----- stderr -----
