panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__arrays__test_empty_initialisation_of_array_that_fits_in_register.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/arrays/test_empty_initialisation_of_array_that_fits_in_register.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/arrays/test_empty_initialisation_of_array_that_fits_in_register.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition a1~2 `array<char; 1>` (braced ∅))
         (definition a2~3 `array<char; 2>` (braced ∅))
         (definition a3~4 `array<char; 3>` (braced ∅))
         (definition a4~5 `array<char; 4>` (braced ∅))
         (definition a5~6 `array<char; 5>` (braced ∅))
         (definition a6~7 `array<char; 6>` (braced ∅))
         (definition a7~8 `array<char; 7>` (braced ∅))
         (definition a8~9 `array<char; 8>` (braced ∅))
         (definition b1~10 `array<short; 1>` (braced ∅))
         (definition b2~11 `array<short; 2>` (braced ∅))
         (definition b3~12 `array<short; 3>` (braced ∅))
         (definition b4~13 `array<short; 4>` (braced ∅))
         (definition c1~14 `array<int; 1>` (braced ∅))
         (definition c2~15 `array<int; 2>` (braced ∅))
         (definition d1~16 `array<long; 1>` (braced ∅)))))

----- stderr -----
