panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__arrays__test_multidimensional_array_length.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/arrays/test_multidimensional_array_length.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/arrays/test_multidimensional_array_length.c"
   (declaration external printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition external
      main~1 `fn(∅: int, argv: ptr<ptr<char>>) -> int`
      (params
         main.unnamed_parameter.0~3 `int`
         argv~4 `ptr<ptr<char>>`)
      (compound-statement
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>` (deref `ptr<char>` (ptr-add `ptr<ptr<char>>` (argv~4 `ptr<ptr<char>>`) (sign-extend `long` (1 `int`)))))
               (lengthof `unsigned long` 100 `array<array<ptr<long>; 400>; 100>`)))
         (definition xs~5 `array<array<int; 27>; 42>` ∅)
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>` (deref `ptr<char>` (ptr-add `ptr<ptr<char>>` (argv~4 `ptr<ptr<char>>`) (sign-extend `long` (1 `int`)))))
               (lengthof `unsigned long` 42 (xs~5 `array<array<int; 27>; 42>`))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>` (deref `ptr<char>` (ptr-add `ptr<ptr<char>>` (argv~4 `ptr<ptr<char>>`) (sign-extend `long` (1 `int`)))))
               (lengthof `unsigned long` 27
                  (deref `array<int; 27>`
                     (noop-type-conversion `ptr<array<int; 27>>`
                        (addressof `ptr<array<array<int; 27>; 42>>`
                           (xs~5 `array<array<int; 27>; 42>`)))))))
         (definition ys~6 `ptr<array<array<int; 27>; 42>>` ∅)
         (return
            (truncate `int`
               (add `unsigned long` (lengthof `unsigned long` 42 (deref `array<array<int; 27>; 42>` (ys~6 `ptr<array<array<int; 27>; 42>>`)))
                  (lengthof `unsigned long` 27
                     (deref `array<int; 27>`
                        (noop-type-conversion `ptr<array<int; 27>>`
                           (addressof `ptr<array<array<int; 27>; 42>>`
                              (deref `array<array<int; 27>; 42>` (ys~6 `ptr<array<array<int; 27>; 42>>`))))))))))))

----- stderr -----
