panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__arrays__test_single_dimensional_array.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/arrays/test_single_dimensional_array.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/arrays/test_single_dimensional_array.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition xs~2 `array<int; 42>` ∅)
         (expression
            (assign `int`
               (deref `int`
                  (ptr-add `ptr<int>`
                     (noop-type-conversion `ptr<int>`
                        (addressof `ptr<array<int; 42>>`
                           (xs~2 `array<int; 42>`)))
                     (sign-extend `long` (0 `int`))))
               (1 `int`)))
         (expression
            (assign `int`
               (deref `int`
                  (ptr-add `ptr<int>`
                     (noop-type-conversion `ptr<int>`
                        (addressof `ptr<array<int; 42>>`
                           (xs~2 `array<int; 42>`)))
                     (sign-extend `long` (1 `int`))))
               (2 `int`)))
         (expression
            (assign `int`
               (deref `int`
                  (ptr-add `ptr<int>`
                     (noop-type-conversion `ptr<int>`
                        (addressof `ptr<array<int; 42>>`
                           (xs~2 `array<int; 42>`)))
                     (sign-extend `long` (41 `int`))))
               (3 `int`)))
         (return
            (add `int`
               (deref `int`
                  (ptr-add `ptr<int>`
                     (noop-type-conversion `ptr<int>`
                        (addressof `ptr<array<int; 42>>`
                           (xs~2 `array<int; 42>`)))
                     (sign-extend `long` (1 `int`))))
               (deref `int`
                  (ptr-add `ptr<int>`
                     (noop-type-conversion `ptr<int>`
                        (addressof `ptr<array<int; 42>>`
                           (xs~2 `array<int; 42>`)))
                     (sign-extend `long` (41 `int`)))))))))

----- stderr -----
