panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__arrays__test_single_dimensional_array_length.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/arrays/test_single_dimensional_array_length.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/arrays/test_single_dimensional_array_length.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition xs~2 `array<long; 42>` ∅)
         (return (truncate `int` (lengthof `unsigned long` 42 (xs~2 `array<long; 42>`)))))))

----- stderr -----
