panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__arrays__test_tentative_definition_of_array_of_unknown_size.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/arrays/test_tentative_definition_of_array_of_unknown_size.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/arrays/test_tentative_definition_of_array_of_unknown_size.c"
   (tentative-definition external xs~0 `array<int; ∅>` ∅)
   (function-definition external
      main~1 `fn() -> int`
      (compound-statement
         (expression
            (assign `int`
               (deref `int`
                  (ptr-add `ptr<int>`
                     (noop-type-conversion `ptr<int>`
                        (addressof `ptr<array<int; ∅>>`
                           (xs~0 `array<int; ∅>`)))
                     (sign-extend `long` (0 `int`))))
               (42 `int`)))
         (return
            (deref `int`
               (ptr-add `ptr<int>`
                  (noop-type-conversion `ptr<int>`
                     (addressof `ptr<array<int; ∅>>`
                        (xs~0 `array<int; ∅>`)))
                  (sign-extend `long` (0 `int`))))))))

----- stderr -----
